--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <!doctype html>
-<head>
+<head>    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 </head>
-<body>
-  <h1> test my santa</h1>
+<body ng-app="my-happy-santa">
+    <div class="container">
+    <div class="row">
+        <div ng-controller="nameController">
+            <h1> Новогоднее волшебство </h1>
+            <p>Твое имя: <input type="text" ng-model="name"></p>
+            <div ng-if="name != null">Ты поздравляешь 
+                <strong> {{ names[orders[name.toUpperCase()]] }} </strong>
+            </div>
+        </div>
+        <div>
+            <img src="https://24smi.org/public/media/resize/660x-/person/2017/12/18/mczwggka3roy-ded-moroz.jpg" width="200px" class="rounded float-left" >
+        </div>
+    </div>
+    </div>
+    <script src="app.js"></script>
 </body>
